--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "vite": "^4.4.7"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.1",
-    "bootstrap-icons": "^1.10.5"
+    "bootstrap-icons": "^1.10.5",
+    "sweetalert2": "^11.7.31"
   }
 }
